--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,13 @@
 <resources>
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
+    <color name="colorBlack">#000000</color>    1
     <color name="colorAccent">#D81B60</color>
-    <color name="colorBlack">#000000</color>
+    <color name="colorGreen">#62FF00</color>
+    <color name="colorOrange">#FF9800</color>
+    <color name="colorPurple">#673AB7</color>
+    <color name="colorRed">#E91E63</color>
+    <color name="colorBlue">#2196F3</color>
+
 
 </resources>
